--- a/public/scss/partials/_navbar.scss
+++ b/public/scss/partials/_navbar.scss
@@ -36,10 +36,10 @@
 }
 
 .navbar-li {
-    float: left;
+    float: right;
 }
 .navbar-li.left{
-    float: left;
+    float: right;
 }
 
 .navbar-li a {
