--- a/templates/admin_panel/doctor/edit.html.twig
+++ b/templates/admin_panel/doctor/edit.html.twig
@@ -1,7 +1,8 @@
 {% extends 'admin_panel/index.html.twig' %}
 
 {% block content %}
-    <h1>Edytuj lekarza</h1>
-    {{include('admin_panel/doctor/_form.html.twig')}}
-
+    <div class="container">
+        <h1>Edytuj lekarza</h1>
+        {{include('admin_panel/doctor/_form.html.twig')}}
+    </div>
 {% endblock %}
