--- a/templates/admin_panel/unit/_add.html.twig
+++ b/templates/admin_panel/unit/_add.html.twig
@@ -29,6 +29,6 @@
                </tr>
           {% endfor %}
      </table>
-     <a class="link" href="{{ path('admin.doctor_add') }}">Dodaj nowego lekarza</a>
+     <a class="link-as-btn" href="{{ path('admin.doctors') }}">Dodaj nowego lekarza</a>
      </div>
 {% endblock content %}
