--- a/templates/admin_panel/unit/show.html.twig
+++ b/templates/admin_panel/unit/show.html.twig
@@ -38,6 +38,6 @@
     {% endfor %}
     </table>
 
-    <a class="link" href="{{ path('admin.unit_add', {'idClinic': clinic.id}) }} ">Dodaj lekarza do poradni</a>
+    <a class="link-as-btn" href="{{ path('admin.unit_add', {'idClinic': clinic.id}) }} ">Przypisz lekarza do poradni</a>
 </div>
 {% endblock content %}
