--- a/templates/admin_panel/clinic/index.html.twig
+++ b/templates/admin_panel/clinic/index.html.twig
@@ -17,19 +17,21 @@
             <th>Id poradni</th>
             <th>Nazwa</th>
             {% if is_granted('ROLE_ADMIN') %}
-                <th>Akcja</th>
+                <th colspan="1">Akcja</th>
             {% endif %}
 
         </tr>
     {% for c in clinics %}
         <tr>
             <td>{{ c.id }}</td>
-            <td><a class="link-blue" href="{{ path('admin.unit_show', {id: c.id}) }}">{{ c.name }}</a></td>
+            <td>{{ c.name }}</td>
+            {% if is_granted('ROLE_ADMIN') %}
             <td>
-                {% if is_granted('ROLE_ADMIN') %}
-                    <a class="delete" href="{{ path('admin.clinic_delete', {id: c.id}) }}">Usuń</a>
-                {% endif %}
+                <a class="delete" href="{{ path('admin.clinic_delete', {id: c.id}) }}">Usuń</a>
+                <a class="assign" href="{{ path('admin.unit_show', {id: c.id}) }}">Wyświetl</a>
+                <a class="assign" href="{{ path('admin.unit_add', {'idClinic': c.id}) }} ">Przypisz lekarza</a>
             </td>
+            {% endif %}
         </tr>
     {% endfor %}
     </table>
