--- a/templates/admin_panel/doctor/_form.html.twig
+++ b/templates/admin_panel/doctor/_form.html.twig
@@ -36,13 +36,10 @@
             <span class="form-error">{{ form_errors(form.spec) }}</span>
         </div>
         <div class="form-item-col">
-            {{ form_label(form.status, 'Status lekarza', {'attr': {'class' : 'form-label'}} ) }}
-            {% if form_errors(form.status) %}
-                {{ form_widget(form.status, {'attr': {'class' : 'form-input form-input--error'}} ) }}
-            {% else %}
-                {{ form_widget(form.status, {'attr': {'class' : 'form-input'}} ) }}
-            {% endif %}
+            {{ form_label(form.status, 'Status', {'attr': {'class' : 'form-label'}} ) }}
+            {{ form_widget(form.status, {'attr': {'class' : 'form-select select--small'}} ) }}
             <span class="form-error">{{ form_errors(form.status) }}</span>
         </div>
         <button class="form-btn">Zatwierdź</button>
+        <a class="link-as-btn cancel" href="{{ path('admin.doctors') }}">Rezygnuj</a>
     {{ form_end(form) }}
