--- a/templates/admin_panel/doctor/add.html.twig
+++ b/templates/admin_panel/doctor/add.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin_panel/index.html.twig' %}
 
 {% block content %}
-<div class="container admin">
+<div class="container form">
     {% for label, messages in app.flashes(['success', 'fail']) %}
         {% for message in messages %}
             <div class="flash-{{ label }}">
