--- a/templates/admin_panel/users/_add.html.twig
+++ b/templates/admin_panel/users/_add.html.twig
@@ -50,14 +50,8 @@
             <span class="form-error">{{ form_errors(form.lastName) }}</span>
         </div>
     </div>
-    <div class="form-item-col">
-        {{ form_label(form.roles, 'Nazwisko', {'attr': {'class' : 'form-label'}} ) }}
-        {% if form_errors(form.roles) %}
-            {{ form_widget(form.roles, {'attr': {'class' : 'form-input form-input--error'}} ) }}
-        {% else %}
-            {{ form_widget(form.roles, {'attr': {'class' : 'form-input'}} ) }}
-        {% endif %}
-        <span class="form-error">{{ form_errors(form.roles) }}</span>
+    <div class="form-item-radio">
+        {{ form_row(form.roles, {'label':'Role'}) }}
     </div>
     <div class="form-item-col">
         <button class="form-btn">Dodaj</button>
