--- a/templates/admin_panel/users/users.html.twig
+++ b/templates/admin_panel/users/users.html.twig
@@ -34,6 +34,6 @@
        
         {% endfor %}
     </table>
-    <a class="link" href="{{ path('admin.user_add') }}">Dodaj użytkownika</a>
+    <a class="link-as-btn" href="{{ path('admin.user_add') }}">Dodaj użytkownika</a>
 </div>  
 {% endblock %}
