--- a/templates/admin_panel/visit/_filters.html.twig
+++ b/templates/admin_panel/visit/_filters.html.twig
@@ -6,6 +6,8 @@
     {{ form_widget(form.doctor, {'attr': {'class': 'form-select form-select--small'}}) }}
     {{ form_label(form.type) }}
     {{ form_widget(form.type, {'attr': {'class': 'form-select form-select--small'}}) }}
+    {{ form_label(form.status) }}
+    {{ form_widget(form.status, {'attr': {'class': 'form-select form-select--small'}}) }}
 {{ form_end(form) }}
 
 <script>
