--- a/public/scss/components/_links.scss
+++ b/public/scss/components/_links.scss
@@ -29,3 +29,13 @@
     opacity: 0;
     transition: opacity .25s;
 }
+
+.link-blue {
+    text-decoration: none;
+    font-weight: $fw-bold;
+    color: $primary-color;
+    transition: .25s color;
+    &:hover {
+        color: $primary-color-dk;
+    }
+}
