--- a/public/scss/components/_flashes.scss
+++ b/public/scss/components/_flashes.scss
@@ -3,7 +3,7 @@
 .flash-success {
     padding: 20px;
     background-color: rgba(138, 255, 136, 0.68);
-    color: black;
+    color: $black;
     margin-bottom: 15px;
     /*border-radius: 20px;*/
 }
@@ -11,7 +11,7 @@
 .flash-fail {
     padding: 20px;
     background-color: rgb(255, 156, 156);
-    color: black;
+    color: $black;
     margin-bottom: 15px;
     ul {
         list-style: none;
@@ -22,7 +22,8 @@
 }
 
 .flash-info{
-    padding: .5em 1em;
+    padding: 20px;
+    color: $black;
     background: #d5e7ff;
     
 }
