--- a/public/scss/modules/_colors.scss
+++ b/public/scss/modules/_colors.scss
@@ -2,6 +2,7 @@ $white: #FFFFFF;
 $grey: #dddddd;
 $light-grey: #f0f0f0;
 $black: #353535;
+$dark-grey: #5e5d5d;
 $primary-color: #284B63;
 $primary-color-dk: #1b3342;
 $primary-color-lt: #d9dee3;
