--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -4,15 +4,14 @@
 
 {% block body %}
 <div class="container">
-    <h1>{{ app.user.name ~ ' ' ~ app.user.lastName }} </h1>
+    <h3>{{ app.user.name ~ ' ' ~ app.user.lastName }}, <small>{{ app.user.PESEL }}</small></h3> 
     <span><b>Zarejestrowano: </b>{{ app.user.createdAt|date('d-m-Y H:i') }}</span>
     <p><b>Email: </b> {{ app.user.email }}</p>
     <p><b>Data urodzenia: </b> {{ app.user.birthday|date('d-m-Y') }}</p>
-    <p><b>PESEL: </b> {{ app.user.PESEL }}</p>
-    <p><b>Numer telefonu: </b> {{ app.user.numPhone }}</p>
-    <p><b>Adres zamieszkania: </b> {{ app.user.address ~ ', ' ~ app.user.city ~ ' ' ~ app.user.postCode }}</p>
-    <p><b>Łączna liczba wizyt: </b>{{ countVisits }}</p>
-
+    <p>{{ app.user.address ~ ', ' ~ app.user.city ~ ' ' ~ app.user.postCode }}</p>
+    <p>{{ app.user.numPhone }}</p>
+    
+    <a href="{{ path('profile.profile_edit') }}" class="link-as-btn">Edytuj profil</a>
     <h2>Wizyty</h2>
     <div class="container-select">
         {{ include('profile/_filters.html.twig') }}
@@ -33,5 +32,6 @@
                 </tr>
             {% endfor %}
     </table>
+    <p><b>Łączna liczba wizyt: </b>{{ countVisits }}</p>
 </div>
 {% endblock %}
