--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,10 @@ h4 {
   font-size: 1.5rem;
 }
 
+small {
+  font-size: 75%;
+}
+
 /* -------------------- FULL CALENDAR -------------- */
 .fc-nonbusiness.fc-bgevent {
   background-color: red;
