--- a/templates/visit/choice.html.twig
+++ b/templates/visit/choice.html.twig
@@ -18,7 +18,8 @@
         </div>
         {% endfor %}
     </div>
-    </div>
+    <input name="action" class="link-as-btn margin-top" onclick="history.back()" type="submit" value="Powrót"/>
+</div>
 
 <script>
     
