--- a/templates/visit/index.html.twig
+++ b/templates/visit/index.html.twig
@@ -35,6 +35,7 @@
                 </div>
             {% endfor %}
     </div>
+    <input name="action" class="link-as-btn margin-top" onclick="history.back()" type="submit" value="Powrót"/>
 </div>
 
 
