--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ h2 {
 }
 
 h3 {
-  font-size: 2rem;
+  font-size: 1.85rem;
 }
 
 h4 {
@@ -367,7 +367,6 @@ template {
   display: none;
 }
 
-/* --------- NAVBAR ------------ */
 @media only screen and (min-width: 768px) {
   .navbar {
     list-style-type: none;
@@ -382,13 +381,18 @@ template {
   }
   .navbar-li a {
     display: block;
-    color: white;
+    color: #FFFFFF;
     text-align: center;
-    padding: 14px 16px;
+    padding: 16px 16px;
     text-decoration: none;
   }
   .navbar-li a:hover {
     background-color: #111;
+  }
+  .navbar-li span {
+    color: #FFFFFF;
+    font-size: 1rem;
+    font-weight: 600;
   }
 }
 
@@ -406,14 +410,15 @@ template {
 }
 
 .navbar-li.left {
-  float: right;
+  float: left;
+  padding: 16px 100px;
 }
 
 .navbar-li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 16px 16px;
   text-decoration: none;
   -webkit-transition: background 0.5s, border-color 0.5s, color 0.5s;
   transition: background 0.5s, border-color 0.5s, color 0.5s;
@@ -946,7 +951,6 @@ select ::-ms-expand {
   background-color: #EAEAEA;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  /* border-radius: 5px; */
   -webkit-transition: background 0.5s, border-color 0.5s, color 0.5s;
   transition: background 0.5s, border-color 0.5s, color 0.5s;
 }
@@ -960,7 +964,7 @@ select ::-ms-expand {
   padding: 15px 15px;
 }
 
-.clinic-card .clinic-item h4 {
+.clinic-card .clinic-item h4, .clinic-card .clinic-item h3 {
   margin-bottom: .7em;
   margin-top: .5em;
 }
@@ -975,20 +979,33 @@ select ::-ms-expand {
   color: #1b3342;
 }
 
+.clinic-card.not-clickable {
+  font-weight: 600;
+  color: #284B63;
+  -webkit-transition: none;
+  transition: none;
+}
+
+.clinic-card.not-clickable:hover {
+  background-color: #EAEAEA;
+  cursor: default;
+}
+
 .form-btn, .link-btn, .link-as-btn {
   background: #284B63;
+  border: 3px solid #284B63;
   color: #FFFFFF;
-  border: none;
   padding: 1em;
   font-weight: 600;
-  -webkit-transition: background .25s;
-  transition: background .25s;
+  -webkit-transition: background .25s, border .25s;
+  transition: background .25s, border .25s;
   text-transform: uppercase;
 }
 
 .form-btn:hover, .link-btn:hover, .link-as-btn:hover {
   cursor: pointer;
   background: #1b3342;
+  border: 3px solid #1b3342;
 }
 
 #menu-click {
@@ -999,23 +1016,40 @@ select ::-ms-expand {
 
 .btn-as-link {
   background: none;
-  border: none;
   font-weight: 600;
   padding-left: 0;
+  border: none;
   cursor: pointer;
 }
 
 .link-as-btn {
   display: inline-block;
   text-decoration: none;
+  border: 3px solid #284B63;
 }
 
 .link-as-btn.cancel {
   background: #e40000;
+  border: 3px solid #e40000;
 }
 
 .link-as-btn.cancel:hover {
   background: #941809;
+  border: 3px solid #941809;
+}
+
+.link-as-btn.back {
+  background: #FFFFFF;
+  border: 3px solid #284B63;
+  color: #284B63;
+  -webkit-transition: background .25s, color .25s, border .25s;
+  transition: background .25s, color .25s, border .25s;
+}
+
+.link-as-btn.back:hover {
+  cursor: pointer;
+  background: #284B63;
+  color: #FFFFFF;
 }
 
 .container-select {
