--- a/templates/admin_panel/users/edit.html.twig
+++ b/templates/admin_panel/users/edit.html.twig
@@ -13,7 +13,7 @@
         <div class="form-item-col">
           <button class="btn-as-link" id="modalBtn">Zmień hasło</button>
         </div>
-        {{ include('admin_panel/users/_form.html.twig') }}
+        {{ include('admin_panel/users/_edit_form.html.twig') }}
        
     </div>
     <div class="modal" id="modalWindow">
