--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -12,13 +12,22 @@
                 </div>
             {% endfor %}
         {% endfor %}
-        <h1>Strona główna</h1>
+        <h1>Przychodnia Rejonowa Online</h1>
+        <div class="contact-container">
+            <h3>Kontakt</h3>
+            <div class="clinic-card not-clickable">
+                <div class="clinic-item">
+                    <p>Lokalizacja: ul. Kobylińskiego 3, 09-400 Płock</p>
+                    <p>Telefon: 22 421 234 23</p>
+                </div>
+            </div>
+        </div>
+        <h3>Przegląd Przychodni</h3>
         <div class="clinics-container">
          
                 <div class="clinic-card">
                     <div class="clinic-item">
-                        <h3><a class="link" href="{{ path('register') }}">Rejestracja</a></h3>
-
+                        <h3><a class="link" href="{{ path('register') }}">e-Rejestracja</a></h3>
                     </div>
                 </div>
                 <div class="clinic-card">
