--- a/public/scss/components/_cards.scss
+++ b/public/scss/components/_cards.scss
@@ -12,7 +12,6 @@
 .clinic-card {
     background-color: #EAEAEA;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    /* border-radius: 5px; */
     transition: background 0.5s, border-color 0.5s, color 0.5s; 
 
     &:hover {
@@ -21,7 +20,7 @@
     }
     .clinic-item {
         padding: 15px 15px;
-        h4 {
+        h4, h3 {
             margin-bottom: .7em;
             margin-top: .5em;
         }
@@ -34,6 +33,16 @@
                     color: $primary-color-dk;
                 }
             }
+        }
+    }
+
+    &.not-clickable {
+        font-weight: $fw-bold;
+        color: $primary-color;
+        transition: none; 
+        &:hover {
+            background-color: #EAEAEA;
+            cursor: default;    
         }
     }
 }
