--- a/public/scss/partials/_navbar.scss
+++ b/public/scss/partials/_navbar.scss
@@ -1,4 +1,3 @@
-/* --------- NAVBAR ------------ */ //TODO: NAVBAR DO POPRAWY
 @media only screen and (min-width: 768px) {
     .navbar {
         list-style-type: none;
@@ -13,16 +12,25 @@
         float: right;
     }
 
+
+
     .navbar-li a {
         display: block;
-        color: white;
+        color: $white;
         text-align: center;
-        padding: 14px 16px;
+        padding: 16px 16px;
         text-decoration: none;
     }
 
     .navbar-li a:hover {
         background-color: #111;
+    }
+
+    .navbar-li span {
+        color: $white;
+        font-size: 1rem;
+       
+        font-weight: $fw-bold;
     }
 
 }
@@ -39,14 +47,15 @@
     float: right;
 }
 .navbar-li.left{
-    float: right;
+    float: left;
+    padding: 16px 100px;
 }
 
 .navbar-li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 16px 16px;
     text-decoration: none;
     transition: background 0.5s, border-color 0.5s, color 0.5s;
 
